added country search by code, drop-down list, adding and deleting a country

--- a/src/components/pages/Metals/MetalsCard/MetalsCard.css
+++ b/src/components/pages/Metals/MetalsCard/MetalsCard.css
@@ -1,5 +1,5 @@
 .metals-background{
-    background-image: url('../images/backgraund-metalCard.jpg');
+    background-image: url('../../../../img/background-metal-card.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -15,7 +15,7 @@
     background-color: white;
 }
 
-.container{
+.container-metals{
     display: flex;
     flex-direction: column;
     padding: 60px;
