--- a/src/components/pages/Currencies/CurrenciesCard/CurrenciesCard.css
+++ b/src/components/pages/Currencies/CurrenciesCard/CurrenciesCard.css
@@ -43,8 +43,42 @@
     height: 60px;
 }
 
-.main{
+.main-table{
     display: flex;
     justify-content: center;
     margin-top: 30px;
+    margin-left: 30px;
+}
+
+.table__cell-button {
+    background-color: #e37777;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.table__cell-button:hover {
+    background-color: #df0a0a;
+    transform: scale(1.05);
+}
+
+.table__cell-button:active {
+    background-color: #830101;
+}
+
+.add-code-in-table{
+    color: #28a745;
+    background-color: #e6f7e6;
+    border: 1px dashed #28a745;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 20px auto;
+    max-width: 300px;
 }
